input/kgateway/manifests/gateway/HTTPRoute_argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway	
      name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - group: ''	
          kind: Service	
          name: argocd-server
          port: 80
          weight: 1	
      matches:
        - headers:
            - name: Host
              type: RegularExpression
              value: argocd\..*
          path:	
            type: PathPrefix	
            value: /
